# telegram-bot

./: Dockerfile  main.py  pyproject.toml  run.sh
config/: config.yaml
src/telegram_bot/: client.py  cofig.py  constants.py
